<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:fillViewport="true"
	android:background="#FFFFFF">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#FFFFFF"
			android:orientation="vertical"
			android:padding="16dp">


			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:background="#F8F8F8"
				android:gravity="center"
				android:orientation="horizontal"
				android:padding="16dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:fontFamily="sans-serif"
					android:text="FAQ"
					android:textColor="@color/black"
					android:textSize="28sp"
					android:textStyle="bold" />

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginStart="10dp"
					android:layout_marginTop="32dp"
					android:layout_marginBottom="32dp"
					android:contentDescription="FAQ Image"
					android:src="@drawable/faq" />
			</LinearLayout>


			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:fontFamily="sans-serif"
				android:lineSpacingExtra="8dp"
				android:layout_marginBottom="30dp"
				android:padding="16dp"
				android:text="@string/faq_txt"
				android:textColor="#000000"
				android:textSize="16sp" />


		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		android:background="@color/white"
		android:orientation="horizontal"
		android:paddingVertical="10dp"
		app:layout_constraintBottom_toBottomOf="parent">


		<ImageView
			android:id="@+id/home_nav"
			android:layout_width="50dp"
			android:layout_height="40dp"
			android:layout_weight="1"
			android:layout_gravity="center_vertical"
			android:contentDescription="@string/home_nav"
			android:onClick="onHomeClick"
			android:src="@drawable/home_light" />

		<ImageView
			android:id="@+id/status_nav"
			android:layout_width="50dp"
			android:layout_height="40dp"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:contentDescription="@string/status_nav"
			android:onClick="onStatusClick"
			android:src="@drawable/status_light" />

		<ImageView
			android:id="@+id/statistics_nav"
			android:layout_width="50dp"
			android:layout_height="40dp"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:contentDescription="@string/statistics_nav"
			android:onClick="onStatisticsClick"
			android:src="@drawable/history_light" />

		<ImageView
			android:id="@+id/settings_nav"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:contentDescription="@string/settings_nav"
			android:src="@drawable/settings_dark"
			android:onClick="onSettingsClick"/>

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
