<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<ScrollView
		android:id="@+id/page_8"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:id="@+id/content_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/liv_room"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginVertical="20dp"
				android:text="@string/kitchen"
				android:textSize="24sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/current_temp_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="left"
				android:layout_marginHorizontal="10dp"
				android:layout_marginVertical="20dp"
				android:text="Current Temperature"
				android:textSize="28sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/current_temp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginHorizontal="10dp"
				android:layout_marginVertical="10dp"
				android:text="@string/_727"
				android:textSize="28sp"
				android:textStyle="bold" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
				android:layout_marginVertical="@dimen/activity_horizontal_margin"
				android:orientation="horizontal">

				<RelativeLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="2">

					<TextView
						android:id="@+id/Desired_temp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginVertical="5dp"
						android:layout_marginStart="5dp"
						android:text="Desired Temperature"
						android:textSize="16sp"
						android:textStyle="bold" />

					<TextView
						android:id="@+id/Desired_temp_des"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@id/Desired_temp"
						android:layout_marginVertical="5dp"
						android:layout_marginStart="5dp"
						android:text="Set your desired temperature"
						android:textSize="16sp" />
				</RelativeLayout>

				<androidx.appcompat.widget.AppCompatButton
					android:id="@+id/minus_symbol"
					android:layout_width="1dp"
					android:layout_height="30dp"
					android:layout_weight="1"
					android:layout_gravity="center"
					android:gravity="center"
					android:background="@drawable/minus_blue"/>

				<TextView
					android:id="@+id/kitchen_temp"
					android:layout_width="wrap_content"
					android:layout_height="35dp"
					android:layout_weight="1"
					android:gravity="center"
					android:layout_gravity="center"
					android:text="15"
					android:textSize="16sp" />

				<androidx.appcompat.widget.AppCompatButton
					android:id="@+id/plus_symbol"
					android:layout_width="1dp"
					android:layout_height="30dp"
					android:layout_weight="1"
					android:layout_gravity="center"
					android:gravity="center"
					android:background="@drawable/plus_blue"
					/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/climate_contrl"
					android:layout_width="101.55dp"
					android:layout_height="35dp"
					android:layout_marginVertical="5dp"
					android:layout_marginStart="5dp"
					android:layout_weight="2"
					android:gravity="center_vertical"
					android:text="Turn Climate Control ON"
					android:textSize="16sp" />

				<androidx.appcompat.widget.SwitchCompat
					android:id="@+id/switch7"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="center"
					android:layout_gravity="center" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
				android:layout_marginVertical="@dimen/activity_horizontal_margin"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="horizontal">

					<TextView
						android:id="@+id/_73_"
						android:layout_width="45.38dp"
						android:layout_height="35dp"
						android:layout_marginVertical="5dp"
						android:layout_marginStart="5dp"
						android:text="@string/timer"
						android:textSize="16sp" />

					<androidx.appcompat.widget.SwitchCompat
						android:id="@+id/timer_switch"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginVertical="5dp"
						android:gravity="center" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="vertical">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="horizontal">

						<TextView
							android:id="@+id/auto_on"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="Auto On" />

						<EditText
							android:id="@+id/auto_on_time"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:inputType="text"
							android:text="12:30" />
					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="horizontal">

						<TextView
							android:id="@+id/set_time"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="Set Time" />

						<EditText
							android:id="@+id/set_timeinhrs"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:inputType="text"
							android:text="2 Hrs" />
					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
				android:orientation="horizontal">

				<androidx.appcompat.widget.AppCompatButton
					android:id="@+id/save"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="@drawable/save_design"
					android:text="Save" />

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		android:background="@color/white"
		android:orientation="horizontal"
		android:paddingVertical="10dp"
		app:layout_constraintBottom_toBottomOf="parent">

	<ImageView
		android:id="@+id/home_nav"
		android:layout_width="50dp"
		android:layout_height="40dp"
		android:layout_weight="1"
		android:contentDescription="@string/home_nav"
		android:src="@drawable/home_light"
		android:onClick="onHomeClick"/>


	<ImageView
		android:id="@+id/status_nav"
		android:layout_width="50dp"
		android:layout_height="40dp"
		android:layout_gravity="center"
		android:layout_weight="1"
		android:contentDescription="@string/status_nav"
		android:onClick="onStatusClick"
		android:src="@drawable/status_light" />

	<ImageView
		android:id="@+id/statistics_nav"
		android:layout_width="50dp"
		android:layout_height="40dp"
		android:layout_gravity="center"
		android:layout_weight="1"
		android:contentDescription="@string/statistics_nav"
		android:onClick="onStatisticsClick"
		android:src="@drawable/history_light" />

	<ImageView
		android:id="@+id/settings_nav"
		android:layout_width="50dp"
		android:layout_height="40dp"
		android:layout_gravity="center"
		android:layout_weight="1"
		android:contentDescription="@string/settings_nav"
		android:src="@drawable/settings_light" />
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
